# MLOPS_iris

./: main.py  pyproject.toml  requirements.txt
data/processed/: test.csv.dvc  train.csv.dvc
notebooks/: Iris.ipynb
src/: data_preprocessing.py
