[project]
name = "mlops-iris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.63.0",
    "evidently>=0.7.15",
    "fastapi>=0.120.1",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]
